Fixing Spacing
Fixing Spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,8 @@
       }
 
       @media only screen and (max-width: 700px) {
+        left: 15px;
+
         .icon {
           display: block;
 
@@ -54,13 +56,16 @@
 
     .right {
       position: absolute;
-      right: 5%;
+      right: 30px;
 
       &.button {
         @media only screen and (max-width: 700px) {
           margin-top: 8px;
           font-size: 25px;
         }
+      }
+      @media only screen and (max-width: 700px) {
+        right: 15px;
       }
     }
 
@@ -128,6 +133,10 @@
 
   :first-child:hover {
     cursor: pointer;
+  }
+
+  @media only screen and (max-width: 700px) {
+    top: 20px;
   }
 }
 
